--- a/client/views/location/nav.html
+++ b/client/views/location/nav.html
@@ -4,8 +4,7 @@
        <div class="container-fluid">
          <!-- Brand and toggle get grouped for better mobile display -->
          <div class="navbar-header">
-           <button type="button" class="navbar-toggle collapsed"
-             ng-click="isCollapsed = !isCollapsed">
+           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" ng-click="isCollapsed = !isCollapsed">
              <span class="sr-only">Toggle navigation</span>
              <span class="icon-bar"></span>
              <span class="icon-bar"></span>
@@ -14,15 +13,13 @@
            <!-- <a class="navbar-brand" href="#">Brand</a> -->
          </div>
          <!-- Collect the nav links, forms, and other content for toggling -->
-         <div class="navbar-collapse visible-xs" collapse="!isCollapsed">
+         <div class="collapse navbar-collapse visible-xs" id="bs-example-navbar-collapse-1" collapse="!isCollapsed">
            <ul class="nav navbar-nav">
-              <!--<li><a mol-region-selector region="model.constraints.region">Search for species by region</a></li>
-              <li><a ng-click="reset()">Search for species on the map</a></li>
-            -->
+
            </ul>
            <ul class="nav navbar-nav visible-xxxs visible-xxs">
                <li>
-                   <a ng-href="http://species.mol.org/species/{{species.scientificname}}">
+                   <a ui-sref="location">
                       <i class="fa fa-info"></i>Species</a>
                </li>
                <li>
